Add safe Photoshop text layer editing
